add change size button that change the size of the grid

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <div id="grid-container" class="grid"></div>
         </div>
 
-        <button id="reset">Reset</button>
+        <div>
+            <button id="reset">Reset</button>
+
+            <button id="size">Change Size</button>
+        </div>
 
         <script src="script.js"></script>
     </body>
