--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <h1>
          Etch a Sketch
         </h1>
-        <h3>
-            Use your mouse over the boxes below to change them into a random color.
-        </h3>
+        <p>
+            Use your mouse, or press with your fingers if you're on a mobile device, over the boxes below to change them into a random color.
+        </p>
     </header>
 
     <body>
